--- a/index.html
+++ b/index.html
@@ -51,6 +51,19 @@
     .video-wrap { position:relative; width:100%; aspect-ratio:16 / 9; background:#000; border-radius:12px; overflow:hidden; box-shadow:0 2px 10px rgba(0,0,0,.06); }
     .video-wrap iframe { position:absolute; inset:0; width:100%; height:100%; border:0; }
 
+    /* Partner / Träger */
+    .partner { border: 1px solid rgba(0,0,0,.08); border-radius:12px; padding:18px; background:#fff; box-shadow:0 2px 10px rgba(0,0,0,.04); }
+    .partner h2 { margin-top:0; }
+    .orgs { display:grid; gap:18px; grid-template-columns: 1fr; align-items:start; }
+    @media (min-width: 780px) { .orgs { grid-template-columns: 1fr 1fr; } }
+    .org { display:grid; grid-template-columns: 80px 1fr; gap:14px; align-items:start; }
+    .org .logoBox { display:flex; align-items:center; justify-content:center; background:#f9fafb; border:1px solid #e5e7eb; border-radius:10px; padding:10px; }
+    .org img { max-width: 100%; height: auto; display:block; }
+    .org h3 { margin:0 0 6px; font-size:1.05rem; }
+    .org p { margin:0 0 10px; }
+    .org a { color:#0a7c5b; text-decoration:none; }
+    .org a:hover { text-decoration:underline; }
+
     /* Footer */
     footer .legal { text-align:center; display:block; }
   </style>
@@ -91,7 +104,6 @@
       <section id="sendung">
         <h2>Gestern in der Sendung</h2>
         <div class="video-wrap">
-          <!-- privacy-enhanced domain -->
           <iframe
             src="https://www.youtube-nocookie.com/embed/lzq9l2sW6Lo"
             title="Gestern in der Sendung – Solarstrom statt Erdgas-Strom"
@@ -161,17 +173,59 @@
         </div>
       </section>
 
-      <!-- FAQ -->
-      <section id="faq">
-        <h2>FAQ</h2>
-        <details>
-          <summary>Warum Vorrang für Solar-Direktstrom?</summary>
-          <p>Weil er Kosten senkt, Netze entlastet und schnell ausbaubar ist.</p>
-        </details>
-        <details>
-          <summary>Wie funktioniert der Postversand?</summary>
-          <p>Sie reichen Ihren Brief online ein; wir drucken, kuvertieren und versenden physisch. Details in der Datenschutzerklärung.</p>
-        </details>
+      <!-- Träger der Kampagne -->
+      <section id="partner" class="partner">
+        <h2>Träger der Kampagne</h2>
+        <p>Die Kampagne wird von dem VEEG e.V. und der EWG durchgeführt.</p>
+
+        <div class="orgs">
+          <!-- VEEG -->
+          <article class="org">
+            <div class="logoBox">
+              <img src="assets/veeglogo.svg" alt="VEEG e. V. – Verband EnergieErzeugende Gebäude">
+            </div>
+            <div>
+              <h3>VEEG e. V. – Verband EnergieErzeugende Gebäude</h3>
+              <p>
+                Der VEEG e. V. ist der „Verband EnergieErzeugende Gebäude“. Er hat das Ziel,
+                Gebäude als aktive Energieproduzenten zu fördern – also solche, die ihren
+                Energiebedarf selbst erzeugen, möglichst energiekostenfrei werden und
+                Klimaschutz praktisch mitdenken.
+              </p>
+              <p>
+                Der Verband informiert, vernetzt Fachleute und Eigentümer, beteiligt sich in der
+                öffentlichen Debatte (z. B. mit Live-Sendungen) und wirkt darauf hin, bürokratische
+                Hürden abzubauen, damit Energiewende und Klimaschutz in Gebäuden schneller
+                umgesetzt werden können.
+              </p>
+              <p><a href="https://ve-eg.de/" target="_blank" rel="noopener">ve-eg.de</a></p>
+            </div>
+          </article>
+
+          <!-- EWG -->
+          <article class="org">
+            <div class="logoBox">
+              <img src="assets/energywatchgroup.png" alt="Energy Watch Group (EWG)">
+            </div>
+            <div>
+              <h3>Energy Watch Group (EWG)</h3>
+              <p>
+                Die Energy Watch Group (EWG) ist ein gemeinnütziger Think Tank, der sich dem Ziel verschrieben hat,
+                die Klimakrise zu stoppen und die Erdatmosphäre wieder abzukühlen.
+              </p>
+              <p>
+                Sie arbeitet mit wissenschaftlichen Analysen, Studien und Politikempfehlungen, um die CO₂-Emissionen
+                zu senken – auf globaler, nationaler und kommunaler Ebene – und bringt diese Erkenntnisse in den Dialog
+                mit Entscheidungstragenden und in die Medien.
+              </p>
+              <p>
+                Ein Schwerpunkt ist, konsequent von dem gewünschten Ergebnis her zu denken: das Erreichen von
+                Null-Emissionen, und aufzuzeigen, wie das technisch und politisch machbar ist.
+              </p>
+              <p><a href="https://energywatchgroup.org/" target="_blank" rel="noopener">energywatchgroup.org</a></p>
+            </div>
+          </article>
+        </div>
       </section>
 
     </main>
@@ -180,7 +234,7 @@
       <nav class="legal">
         <a href="Impressum.html">Impressum</a> · <a href="Datenschutz.html">Datenschutz</a>
       </nav>
-      <p style="text-align:center">© Kampagne „Solarstrom statt Erdgas-Strom“</p>
+      <p style="text-align:center">© Kampagne „Solarstrom statt Erdgas-Strom”</p>
     </footer>
 
   </div>
@@ -195,15 +249,3 @@
   </script>
 </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
