--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
     <header class="site-header middle">
       <div class="hero">
-        <img src="assets/logo.png" alt="Kampagnenlogo Solarstrom statt Erdgas-Strom">
+        <img src="assets/SolarstromGasstromTitel.png" alt="Kampagnenlogo Solarstrom statt Erdgas-Strom">
         <div>
           <h1>Solarstrom statt Erdgas-Strom</h1>
           <p class="tagline">Informieren. Mitmachen. Briefe an Abgeordnete – wir drucken &amp; versenden physisch.</p>
@@ -249,3 +249,4 @@
   </script>
 </body>
 </html>
+
