--- a/index-fullneu.html
+++ b/index-fullneu.html
@@ -70,12 +70,6 @@
             </div>
             <label for="abgeordneter">Name der/s Abgeordneten (optional)</label>
             <input id="abgeordneter" name="mp_name">
-
-            <div id="mpSelectWrap" style="display:none; margin-top:8px;">
-              <label for="mp_select">Treffer in Ihrem Ort</label>
-              <select id="mp_select"></select>
-              <div class="hint" id="mp_hint"></div>
-            </div>
           </fieldset>
 
           <fieldset>
@@ -121,7 +115,7 @@ Deshalb möchte ich Sie für die Forderungen der Initiative „Sonnenstrom statt
 
 Dieser Brief entstand mit der Aktion „Sonnenstrom statt Erdgasstrom“. Weitere Informationen zu den Plänen von Frau Reiche und der BNetzA finden Sie auf https://www.aktionsolarstrom.de.
 
-Vielen Dank für ihre Aufmerksamkeit. Es würde mich sehr freuen von Ihnen zu hören.
+Vielen Dank für Ihre Aufmerksamkeit. Es würde mich sehr freuen, von Ihnen zu hören.
 
 Mit freundlichen Grüßen
 
@@ -135,7 +129,6 @@ Mit freundlichen Grüßen
               in einer separaten E-Mail an <em>webmaster(at)muc-mib.de</em>.
             </p>
           </fieldset>
-
           <fieldset>
             <legend>Versand &amp; Benachrichtigung</legend>
             <div class="shipbox">
@@ -170,274 +163,137 @@ Mit freundlichen Grüßen
     </footer>
   </div>
 
-  <!-- MdB-Lookup mit geschlechtsspezifischer Anrede -->
+  <!-- MdB Lookup -->
   <script>
-  (function () {
-    const $ = (s) => document.querySelector(s);
-    const elPLZ  = $('#plz'), elCity = $('#city'), elMP = $('#abgeordneter'), elMSG = $('#message');
-    const selWrap = $('#mpSelectWrap'), elSel = $('#mp_select'), elHint = $('#mp_hint');
-
-    const clean = (s) => String(s||'').replace(/^\s*nan\s+/i,'').trim();
-    const norm  = (t) => String(t||'').normalize('NFD').replace(/[\u0300-\u036f]/g,'').replace(/[^\w\s]/g,'').replace(/\s+/g,' ').trim().toLowerCase();
-
-    const female = new Set(['anna','sabine','ursula','katrin','katrina','claudia','renate','petra','britta','heike','steffi','stefanie','julia','juliane','christine','christina','lisa','marie','maria','sandra','nicole','monika','angelika','andrea','anja','martina','eva','kerstin','marlene','leonie','sarah','saskia','tina','nadja','ilse','gabriele','gudrun','carolin','caroline','carola','jasmin','helga','ingrid','gerda','bettina','kathrin','karin','svenja','ricarda','serap','elisabeth']);
-    const male   = new Set(['hans','peter','wolfgang','thomas','michael','stefan','stephan','knut','david','timon','frank','martin','jürgen','juergen','andreas','markus','georg','friedrich','karl','carsten','robert','ralf','ralph','rainer','dirk','heiko','heinrich','paul','max','alexander','christian','christoph','lars','jan','tobias','sebastian','oliver','uwe','ulrich','volker','klaus','siegfried','nils']);
-
-    function splitName(full) {
-      let s = full.replace(/\b(Dr\.?|Prof\.?|MdB)\b/gi,'').replace(/\s+/g,' ').trim();
-      const parts = s.split(' ');
-      return { first: parts[0]||'', last: parts[parts.length-1]||'', raw: s };
-    }
-    function guessGender(first) {
-      const f = first.toLowerCase();
-      if (female.has(f)) return 'f';
-      if (male.has(f))   return 'm';
-      return null;
-    }
-    function buildPoliteSalutation(name, fallback) {
-      if (/Sehr geehrte\s+(Frau|Herr)\b/i.test(fallback||'')) return fallback;
-      const { first, last } = splitName(name||'');
-      const g = guessGender(first);
-      if (g === 'm') return 'Sehr geehrter Herr ' + last;
-      if (g === 'f') return 'Sehr geehrte Frau ' + last;
-      if (fallback && /geehrte\/r/i.test(fallback)) return 'Sehr geehrte Damen und Herren';
-      return fallback || 'Sehr geehrte Damen und Herren';
-    }
-
-    async function loadJson(url){ const r=await fetch(url,{cache:'no-store'}); if(!r.ok) throw new Error(url); return r.json(); }
-
-    async function findCandidates(plz, cityRaw) {
-      const [plzMap, wkMap, ortMap] = await Promise.all([
-        loadJson('assets/data/plz_to_wk.json'),
-        loadJson('assets/data/wk_to_mdb.json'),
-        loadJson('assets/data/ort_to_wk.json'),
-      ]);
-
-      let wks = plzMap[plz] || [];
-      const cityKey = norm(cityRaw);
-
-      if ((!wks || !wks.length) && cityKey) {
-        const hits = Object.entries(ortMap).filter(([k]) => k.startsWith(cityKey)).map(([, arr]) => arr);
-        wks = [...new Set(hits.flat())];
-      }
-      if (wks.length > 1 && cityKey) {
-        const hits = Object.entries(ortMap).filter(([k]) => k.startsWith(cityKey)).map(([, arr]) => arr);
-        const byCity = new Set([].concat(...hits));
-        const narrowed = wks.filter(w => byCity.has(String(w)));
-        if (narrowed.length) wks = narrowed;
-      }
-
-      const byName = new Map();
-      for (const wk of (wks||[])) {
-        const m = wkMap[String(wk)];
-        if (!m) continue;
-        const name = clean(m.mdb_name);
-        if (!name) continue;
-
-        const computedAnrede = buildPoliteSalutation(name, clean(m.anrede));
-        const address = (m.bundestag_address || 'Deutscher Bundestag\nPlatz der Republik 1\n11011 Berlin')
-                          .replace(/\s*\n\s*/g,'\n').trim();
-        if (!byName.has(name)) {
-          byName.set(name, {
-            wk: String(m.wk_nr || m.wk || ''), name, party: clean(m.fraktion || m.party || ''),
-            anrede: computedAnrede, address
-          });
-        }
-      }
-      return { wks: [...new Set((wks||[]).map(String))], candidates: [...byName.values()] };
-    }
-
-    function ensureIntroOnBase(anrede, addr, name) {
-      const base = elMSG.dataset.base || elMSG.value || '';
-      const addrLine = String(addr || 'Deutscher Bundestag\nPlatz der Republik 1\n11011 Berlin').replace(/\s*\n\s*/g,'\n').trim();
-
-      const lines = [];
-      if (name) lines.push(name);
-      if (!/Deutscher Bundestag/i.test(addrLine)) lines.push('Deutscher Bundestag');
-      lines.push(...addrLine.split('\n'));
-
-      const addrBlock = lines.join('\n');
-      elMSG.dataset.tpl = base
-        .replace('{MdB_Name_und_Adresse}', addrBlock)
-        .replace('{MdB_Adresse}', addrBlock)
-        .replace('{Anrede}', anrede || 'Sehr geehrte Damen und Herren');
-
-      if (typeof window._applyTokens === 'function') window._applyTokens();
-    }
-
-    function hideSelect(){ selWrap.style.display='none'; elSel.innerHTML=''; elHint.textContent=''; }
-    function showSelect(cands, wks){
-      elSel.innerHTML='';
-      const opt0=document.createElement('option');
-      opt0.value=''; opt0.textContent='Bitte Abgeordnete:n auswählen …';
-      elSel.appendChild(opt0);
-      cands.forEach(c=>{
-        const o=document.createElement('option');
-        o.value=c.name;
-        o.textContent=c.name + (c.party ? ' – ' + c.party : '');
-        o.dataset.anrede=c.anrede;
-        o.dataset.address=c.address;
-        elSel.appendChild(o);
-      });
-      elHint.textContent = (wks.length>1) ? 'Mehrere Wahlkreise: ' + wks.join(', ') : 'Mehrere Treffer im Ort.';
-      selWrap.style.display='block';
-    }
-    function chooseByName(name){
-      if(!name) return;
-      const opt=[...elSel.options].find(o=>o.value===name);
-      const anrede = opt?.dataset?.anrede;
-      const address= opt?.dataset?.address|| 'Deutscher Bundestag\nPlatz der Republik 1\n11011 Berlin';
-      elMP.value=name;
-      ensureIntroOnBase(anrede,address,name);
-    }
-    elSel.addEventListener('change',()=>{ if(elSel.value) chooseByName(elSel.value); });
-    elMP.addEventListener('blur',()=>{ const n=(elMP.value||'').trim(); if(n) chooseByName(n); });
-
-    let t=null; const scheduleLookup=(ms=300)=>{ clearTimeout(t); t=setTimeout(runLookup,ms); };
-    if(!elMSG.dataset.base) elMSG.dataset.base = elMSG.value;
-    elPLZ.addEventListener('input',()=>{ const v=(elPLZ.value||'').trim(); if(/^\d{5}$/.test(v)) scheduleLookup(0); });
-    elCity.addEventListener('input',()=>{ const v=(elCity.value||'').trim(); if(v.length>=2) scheduleLookup(300); });
-    ['change','blur'].forEach(ev=>{ elPLZ.addEventListener(ev,runLookup); elCity.addEventListener(ev,runLookup); });
-
+  (function(){
+    const $ = (s)=>document.querySelector(s);
+    const elMSG=$('#message');
+    const elMP=$('#abgeordneter');
+    const elPLZ=$('#plz');
+    const elCity=$('#city');
+    async function loadJson(url){const r=await fetch(url,{cache:'no-store'});return r.json();}
     async function runLookup(){
-      hideSelect();
-      const plz=(elPLZ.value||'').trim(), city=(elCity.value||'').trim();
-      if(!/^\d{5}$/.test(plz)) return;
-
-      try{
-        const { wks, candidates } = await findCandidates(plz, city);
-
-        if ((wks && wks.length > 1) || (candidates && candidates.length > 1)) {
-          elMP.value = '';
-          ensureIntroOnBase('Sehr geehrte Damen und Herren','Deutscher Bundestag\nPlatz der Republik 1\n11011 Berlin','');
-          showSelect(candidates, wks);
-          return;
-        }
-
-        if (candidates.length === 1) {
-          const c = candidates[0];
-          elMP.value = c.name;
-          ensureIntroOnBase(c.anrede, c.address, c.name);
-          hideSelect();
-          return;
-        }
-
-        elMP.value = '';
-        ensureIntroOnBase('Sehr geehrte Damen und Herren','Deutscher Bundestag\nPlatz der Republik 1\n11011 Berlin','');
-        hideSelect();
-      }catch(e){
-        elMP.value = '';
-        ensureIntroOnBase('Sehr geehrte Damen und Herren','Deutscher Bundestag\nPlatz der Republik 1\n11011 Berlin','');
-        hideSelect();
+      const plz=(elPLZ.value||'').trim(),city=(elCity.value||'').trim();
+      if(!/^\d{5}$/.test(plz))return;
+      const [p2w,o2w,w2m]=await Promise.all([
+        loadJson('assets/data/plz_to_wk.json'),
+        loadJson('assets/data/ort_to_wk.json'),
+        loadJson('assets/data/wk_to_mdb.json')
+      ]);
+      const wk=p2w[plz]||o2w[city?.toLowerCase()]||[];
+      const m=w2m[wk[0]];
+      if(m){
+        const name=m.mdb_name||'';
+        const adr=(m.bundestag_address||'Platz der Republik 1\n11011 Berlin').trim();
+        const anr=m.anrede||'Sehr geehrte Damen und Herren';
+        elMSG.value=elMSG.value.replace('{MdB_Name_und_Adresse}',name+'\n'+adr).replace('{Anrede}',anr);
+        elMP.value=name;
       }
     }
+    elPLZ.addEventListener('blur',runLookup);
+    elCity.addEventListener('blur',runLookup);
   })();
   </script>
 
-  <!-- Live-Token-Ersetzung (FIX: keine Live-Überschreibung mehr) -->
+  <!-- Token Handling mit Live-Vorschau für Absender -->
   <script>
   (function(){
-    const $ = (s) => document.querySelector(s);
-    const form = $('#letterForm');
-    const msg  = $('#message');
-
-    let userDirty = false;
-    msg?.addEventListener('input', () => { userDirty = true; });
-
-    const F = {
-      '{Vorname}':'#first_name',
-      '{Nachname}':'#last_name',
-      '{Straße}':'#street',
-      '{PLZ}':'#sender_zip',
-      '{Ort}':'#sender_city'
-    };
-    const esc = s => s.replace(/[.*+?^${}()|[\]\\]/g,'\\$&');
-
-    const topPLZ  = () => ($('#plz')?.value||'').trim();
-    const topCity = () => ($('#city')?.value||'').trim();
-
-    const cleanStreet = (v) => String(v||'')
-      .replace(/\s*,\s*(?=\d)/g,' ')
-      .replace(/\s{2,}/g,' ')
-      .trim();
+    const $=(s)=>document.querySelector(s);
+    const form=$('#letterForm');
+    const msg=$('#message');
+    const F={'{Vorname}':'#first_name','{Nachname}':'#last_name','{Straße}':'#street','{PLZ}':'#sender_zip','{Ort}':'#sender_city'};
+    const esc=s=>s.replace(/[.*+?^${}()|[\]\\]/g,'\\$&');
+    const cleanStreet=v=>String(v||'').replace(/\s*,\s*(?=\d)/g,' ').replace(/\s{2,}/g,' ').trim();
+    const topPLZ=()=>($('#plz')?.value||'').trim();
+    const topCity=()=>($('#city')?.value||'').trim();
 
     function vals(){
-      const m = {};
-      for (const [tok, sel] of Object.entries(F)) {
-        let v = ($(sel)?.value || '').trim();
-        if (tok === '{Straße}') v = cleanStreet(v);
-        if (tok === '{PLZ}' && !v) v = topPLZ();
-        if (tok === '{Ort}' && !v) v = topCity();
-        m[tok] = v;
+      const m={};
+      for(const[t,sel]of Object.entries(F)){
+        let v=($(sel)?.value||'').trim();
+        if(t==='{
+        if(t==='{Straße}') v=cleanStreet(v);
+        if(t==='{PLZ}' && !v) v=topPLZ();
+        if(t==='{Ort}' && !v) v=topCity();
+        m[t]=v;
       }
       return m;
     }
 
-    function apply(base, map){
-      let out = String(base||'');
-      for (const [t, v] of Object.entries(map)){
-        out = out.replace(new RegExp(esc(t), 'g'), v);
+    function apply(base,map){
+      let out=String(base||'');
+      for(const[t,v]of Object.entries(map)){
+        out=out.replace(new RegExp(esc(t),'g'),v);
       }
       return out.replace(/\n{3,}/g,'\n\n').trimEnd();
     }
 
-    if (msg && !msg.dataset.base) msg.dataset.base = msg.value;
+    // --- Live-Vorschau NUR für Absenderblock (nicht-destruktiv) ---
+    const SENDER_TOKENS=['{Vorname}','{Nachname}','{Straße}','{PLZ}','{Ort}'];
 
-    function applyTokensFromLookupOnce(){
-      if (!msg) return;
-      if (userDirty) return;
-      const base = msg.dataset.tpl || msg.dataset.base || msg.value || '';
-      msg.value = apply(base, vals());
+    function renderSenderPreview(){
+      if(!msg) return;
+      const caret=(typeof msg.selectionStart==='number')
+        ?{s:msg.selectionStart,e:msg.selectionEnd}:null;
+      const map=vals();
+      let txt=String(msg.value||'');
+      for(const t of SENDER_TOKENS){
+        const v=map[t]&&map[t].length?map[t]:t;
+        txt=txt.replace(new RegExp(esc(t),'g'),v);
+      }
+      msg.value=txt;
+      if(caret){
+        msg.selectionStart=caret.s;
+        msg.selectionEnd=caret.e;
+      }
     }
-    window._applyTokens = applyTokensFromLookupOnce;
 
-    form?.addEventListener('submit', async (e) => {
+    // Felder → Vorschau triggern
+    ['#first_name','#last_name','#street','#sender_zip','#sender_city','#plz','#city']
+      .forEach(sel=>$(sel)?.addEventListener('blur',renderSenderPreview));
+    document.addEventListener('DOMContentLoaded',renderSenderPreview);
+
+    // --- Formular absenden ---
+    form?.addEventListener('submit',async(e)=>{
       e.preventDefault();
-
-      const userText = msg?.value || '';
-      const finalMsg = apply(userText, vals());
-
-      if (/\{Vorname\}|\{Nachname\}|\{Straße\}|\{PLZ\}|\{Ort\}/.test(finalMsg)) {
-        alert('Bitte füllen Sie Absenderfelder und Straße & Nr. vollständig aus.');
+      const userText=msg?.value||'';
+      const finalMsg=apply(userText,vals());
+      if(/\{Vorname\}|\{Nachname\}|\{Straße\}|\{PLZ\}|\{Ort\}/.test(finalMsg)){
+        alert('Bitte füllen Sie Absenderfelder vollständig aus.');
         return;
       }
 
-      const btn = form.querySelector('button[type="submit"]');
+      const btn=form.querySelector('button[type="submit"]');
       btn?.setAttribute('disabled','');
-
-      const fd = new FormData(form);
-      const payload = {};
+      const fd=new FormData(form);
+      const payload={};
       fd.forEach((v,k)=>payload[k]=v);
-      payload.copy_to_self  = fd.has('copy_to_self');
-      payload.consent_print = fd.has('consent_print');
-      payload.message       = finalMsg;
+      payload.copy_to_self=fd.has('copy_to_self');
+      payload.consent_print=fd.has('consent_print');
+      payload.message=finalMsg;
 
       try{
-        const res  = await fetch(form.action, {
+        const res=await fetch(form.action,{
           method:'POST',
-          headers:{ 'Content-Type':'application/json' },
-          body: JSON.stringify(payload)
+          headers:{'Content-Type':'application/json'},
+          body:JSON.stringify(payload)
         });
-        const text = await res.text();
-        let data; try { data = JSON.parse(text); } catch { throw new Error(text.slice(0,160) || 'Serverantwort kein JSON'); }
-
-        if (data.ok){
-          const box = document.getElementById('successMessage');
-          if (box){
-            box.textContent = 'Danke! Ihr Brief wurde erfolgreich eingereicht. Vorgangs-ID: ' + (data.queueId||'');
-            box.style.display = 'block';
+        const text=await res.text();
+        let data; try{data=JSON.parse(text);}catch{throw new Error(text.slice(0,200)||'Serverantwort kein JSON');}
+        if(data.ok){
+          const box=document.getElementById('successMessage');
+          if(box){
+            box.textContent='Danke! Ihr Brief wurde erfolgreich eingereicht. Vorgangs-ID: '+(data.queueId||'');
+            box.style.display='block';
           }
           form.reset();
-          userDirty = false;
-          if (msg){
-            msg.value = msg.dataset.base || msg.value;
-          }
-        } else {
-          alert('Fehler: ' + (data.error || 'Unbekannt'));
+          renderSenderPreview();
+        }else{
+          alert('Fehler: '+(data.error||'Unbekannt'));
         }
-      } catch(err){
-        alert('Verbindungsfehler: ' + err.message);
-      } finally {
+      }catch(err){
+        alert('Verbindungsfehler: '+err.message);
+      }finally{
         btn?.removeAttribute('disabled');
       }
     });
@@ -445,5 +301,6 @@ Mit freundlichen Grüßen
   </script>
 </body>
 </html>
+
 
 
